[metadata]
name = heat-tempest-plugin
summary = OpenStack Orchestration Tempest Plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/developer/heat-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

keywords =
    setup
    distutils

[files]
packages = 
    heat_tempest_plugin

[entry_points]
tempest.test_plugins = 
    heat = heat_tempest_plugin.plugin:HeatTempestPlugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
