[metadata]
name = heat-tempest-plugin
summary = OpenStack Orchestration Tempest Plugin
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://docs.openstack.org/developer/heat-tempest-plugin
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

keywords =
    setup
    distutils

[files]
packages =
    heat_tempest_plugin

[entry_points]
tempest.test_plugins =
    heat = heat_tempest_plugin.plugin:HeatTempestPlugin
