[metadata]
name = heat-tempest-plugin
summary = OpenStack Orchestration Tempest Plugin
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://docs.openstack.org/developer/heat-tempest-plugin
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

keywords =
    setup
    distutils

[files]
packages =
    heat_tempest_plugin

[entry_points]
tempest.test_plugins =
    heat = heat_tempest_plugin.plugin:HeatTempestPlugin
